--- a/index.html
+++ b/index.html
@@ -142,6 +142,28 @@
         <p class="footer__copyright">© 2022 Around The U.S.</p>
       </footer>
     </div>
+
+    <div class="modal">
+      <div class="modal__container">
+        <button aria-label="" class="modal__close" type="button"></button>
+        <p class="modal__heading">Edit Profile</p>
+        <form class="modal__form">
+          <input
+            class="modal__input"
+            type="text"
+            name="title"
+            placeholder="Jacques"
+          />
+          <input
+            class="modal__input"
+            type="text"
+            name="description"
+            placeholder="Explorer"
+          />
+          <button class="modal__button" type="button">Save</button>
+        </form>
+      </div>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
