Fixed errors for Project 4 Stage 4

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             id="js-profile-subtitle-input"
             placeholder="Description"
           />
-          <button class="modal__button" type="button" id="js-profile-edit-save">
+          <button class="modal__button" type="submit" id="js-profile-edit-save">
             Save
           </button>
         </form>
