--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="modal" id="js-add-modal">
       <div class="modal__container">
         <button aria-label="" class="modal__close" type="button"></button>
-        <p class="modal__heading">New Place</p>
+        <h2 class="modal__heading">New Place</h2>
         <form class="modal__form">
           <input
             class="modal__input"
@@ -96,10 +96,11 @@
           />
           <input
             class="modal__input"
-            type="text"
+            type="url"
             name="imageURL"
             id="js-add-URL-input"
             placeholder="Image link"
+            required
           />
           <button class="modal__button" type="submit" id="js-image-add-save">
             Save
@@ -137,6 +138,6 @@
       </li>
     </template>
 
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
