--- a/index.html
+++ b/index.html
@@ -60,22 +60,41 @@
       <div class="modal__container">
         <button aria-label="" class="modal__close" type="button"></button>
         <p class="modal__heading">Edit Profile</p>
-        <form class="modal__form">
+        <form class="modal__form js-modal-form">
           <input
             class="modal__input"
             type="text"
             name="title"
             id="js-profile-title-input"
             placeholder="Name"
+            minlength="2"
+            maxlength="40"
+            required
           />
+          <span
+            class="modal__input_error"
+            id="js-profile-title-input-error"
+          ></span>
           <input
             class="modal__input"
             type="text"
             name="description"
             id="js-profile-subtitle-input"
             placeholder="Description"
+            minlength="2"
+            maxlength="200"
+            required
           />
-          <button class="modal__button" type="submit" id="js-profile-edit-save">
+          <span
+            class="modal__input_error"
+            id="js-profile-subtitle-input-error"
+          ></span>
+          <button
+            class="modal__button modal__button_disabled"
+            type="submit"
+            id="js-profile-edit-save"
+            disabled
+          >
             Save
           </button>
         </form>
@@ -86,14 +105,21 @@
       <div class="modal__container">
         <button aria-label="" class="modal__close" type="button"></button>
         <h2 class="modal__heading">New Place</h2>
-        <form class="modal__form">
+        <form class="modal__form js-modal-form">
           <input
             class="modal__input"
             type="text"
             name="title"
             id="js-place-title-input"
             placeholder="Title"
+            minlength="1"
+            maxlength="30"
+            required
           />
+          <span
+            class="modal__input_error"
+            id="js-place-title-input-error"
+          ></span>
           <input
             class="modal__input"
             type="url"
@@ -102,7 +128,13 @@
             placeholder="Image link"
             required
           />
-          <button class="modal__button" type="submit" id="js-image-add-save">
+          <span class="modal__input_error" id="js-add-URL-input-error"></span>
+          <button
+            class="modal__button modal__button_disabled"
+            type="submit"
+            id="js-image-add-save"
+            disabled
+          >
             Save
           </button>
         </form>
@@ -138,6 +170,8 @@
       </li>
     </template>
 
-    <script src="./scripts/index.js" defer></script>
+    <!-- Index.js -->
+    <script defer src="./scripts/index.js"></script>
+    <script defer src="./scripts/validation.js"></script>
   </body>
 </html>
