--- a/index.html
+++ b/index.html
@@ -71,10 +71,7 @@
             maxlength="40"
             required
           />
-          <span
-            class="modal__input_error"
-            id="js-profile-title-input-error"
-          ></span>
+          <span class="modal__error" id="js-profile-title-input-error"></span>
           <input
             class="modal__input"
             type="text"
@@ -86,7 +83,7 @@
             required
           />
           <span
-            class="modal__input_error"
+            class="modal__error"
             id="js-profile-subtitle-input-error"
           ></span>
           <button
@@ -116,10 +113,7 @@
             maxlength="30"
             required
           />
-          <span
-            class="modal__input_error"
-            id="js-place-title-input-error"
-          ></span>
+          <span class="modal__error" id="js-place-title-input-error"></span>
           <input
             class="modal__input"
             type="url"
@@ -128,7 +122,7 @@
             placeholder="Image link"
             required
           />
-          <span class="modal__input_error" id="js-add-URL-input-error"></span>
+          <span class="modal__error" id="js-add-URL-input-error"></span>
           <button
             class="modal__button modal__button_disabled"
             type="submit"
