--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </template>
 
     <!-- Index.js -->
-    <script defer src="./scripts/index.js"></script>
+    <script type="module" defer src="./pages/index.js"></script>
     <script defer src="./scripts/validation.js"></script>
   </body>
 </html>
