Project 7: Added new FormValidator

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
       </div>
     </div>
 
+    <!--Card Template-->
     <template id="js-card-template">
       <li class="card">
         <button
@@ -166,6 +167,5 @@
 
     <!-- Index.js -->
     <script type="module" defer src="./pages/index.js"></script>
-    <script defer src="./scripts/validation.js"></script>
   </body>
 </html>
